# ConvrtX-Memee_Content_Moderator

./: .env  .gitignore  API_DOCUMENTATION.md  LICENSE  README.md  main.py  requirements.txt
Data for testing apis/Images_for_testing/: img check5
app/: __init__.py
app/api/: image_router.py  text_router.py
app/services/: __init__.py
app/services/utils/: text_moderation.py
backend/: How to run it  README.md  main.py  pyproject.toml  requirements.txt
backend/Data for testing apis/Images_for_testing/: img check  img check2  img check3  img check4  img check6  img check7
backend/app/: __init__.py  settings.py
backend/app/api/: audio_router.py  check_code_Save.txt  history_router.py  image_router.py  video_router.py
backend/app/services/: gpt_service.py  history_store.py  moderation_service.py  whisper_service.py
backend/app/services/utils/: __init__.py  get_number_from_text.py  get_text_from_audio.py
database/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: config.ts  utils.ts
frontend/src/models/: common.model.ts  moderation.model.ts  nsfw.model.ts  scan.model.ts  upload.model.ts
frontend/src/services/: moderation.service.ts  scanHistory.service.ts  system.service.ts
frontend/src/viewmodels/: scanHistoryStore.tsx  useApiStatusViewModel.ts  useAudioModerationViewModel.ts  useDashboardViewModel.ts  useHistoryViewModel.ts  (+3 more)
video/: .gitignore  README.md  build-video.mjs  package-lock.json  package.json  record-demo.mjs  seed-demo-data.mjs
(+41 files in other folders)
